# BRENDA-Parser

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README  README.rst  TODO.rst  brenda_parser.py  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  testing.py  tox.ini  wsdl.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
brenda/: __init__.py  parser.py
src/brenda_parser/: __init__.py  _version.py  abstract_enzyme_section_visitor.py  api.py  cli.py  enzyme_build_director.py  enzyme_section_walker.py  exceptions.py  helpers.py  parser.py
src/brenda_parser/builder/: __init__.py  abstract_enzyme_builder.py  orm_enzyme_builder.py  parsing_result_logger.py
src/brenda_parser/data/: README.md  __init__.py  information_fields.csv
src/brenda_parser/model/: __init__.py
src/brenda_parser/model/abstract_model/: __init__.py  abstract_accession_model.py  abstract_comment_model.py  abstract_enzyme_model.py  abstract_field_entry_model.py  abstract_information_field_model.py  abstract_organism_model.py
src/brenda_parser/model/data_model/: __init__.py  accession.py
src/brenda_parser/model/orm_model/: __init__.py  accession_orm_model.py  comment_orm_model.py  enzyme.py  field_entry.py  information_field_orm_model.py  organism_orm_model.py  protein.py  reference.py
src/brenda_parser/models/: __init__.py  accession.py  comment.py  enzyme.py  field_entry.py  information_field.py  organism.py  protein.py  reference.py  special_information.py
src/brenda_parser/models/abstract_models/: __init__.py  abstract_accession.py  abstract_enzyme.py
src/brenda_parser/parser/: __init__.py  abstract_enzyme_parser.py  content.py  grammar.py  pyparsing_enzyme_parser.py
src/brenda_parser/parser/result/: __init__.py  abstract_comment_parsing_result.py  abstract_entry_parsing_result.py  abstract_id_parsing_result.py  abstract_ki_value_parsing_result.py  abstract_km_value_parsing_result.py  abstract_natural_substrate_product_parsing_result.py  abstract_parsing_result.py  abstract_protein_parsing_result.py  abstract_reference_parsing_result.py  abstract_substrate_product_parsing_result.py  abstract_turnover_number_parsing_result.py
src/brenda_parser/parsing/: __init__.py  lexer.py  lextab.py  parser.out  parser.py  parsetab.py
tests/: test_brenda_parser.py
tests/benchmarks/: test_performance.py
tests/test_integration/: test_api.py  test_brenda_parser.py
tests/test_integration/model/orm_model/: conftest.py  test_information_field.py
tests/test_models/: conftest.py  test_information_field.py  test_organism.py  test_protein.py  test_reference.py
tests/test_parsing/: test_comments.py  test_lexer.py  test_parser.py
tests/test_parsing/data/: small_section.txt
tests/test_unit/: test_helpers.py  test_parser.py
tests/test_unit/model/abstract_model/: test_abstract_accession.py
tests/test_unit/model/data_model/: test_accession.py
tests/test_unit/models/: conftest.py  test_information_field.py  test_organism.py  test_protein.py  test_reference.py
tests/test_unit/parser/: test_content.py  test_grammar.py  test_pyparsing_enzyme_parser.py
tests/test_unit/parsing/: test_comments.py  test_parser.py
tests/test_unit/parsing/data/: long_comments.txt  transferred.txt
tests/test_unit/test_parsing/: test_comments.py  test_lexer.py  test_parser.py
tests/test_unit/test_parsing/data/: transferred.txt
