[metadata]
name = brenda-parser
url = https://github.com/Midnighter/BRENDA-Parser
download_url = https://pypi.org/project/brenda-parser/
author = Moritz E. Beber
author_email = midnighter@posteo.net
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = BSD 3-Clause License
description = A parser for the BRENDA flat file distribution.
long_description = file: README.rst
keywords =
    BRENDA
    parser
    enzyme

[options]
zip_safe = True
install_requires =
    six
    future
    importlib-resources
    click
    click-log
    ply
    SQLAlchemy
    tqdm
include_package_data = True
python_requires = >=2.7.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    brenda = brenda_parser.cli:cli

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
    __init__.py
    docs
    _version.py
    lexer.py
    lextab.py
    parser.py
    parsetab.py

[coverage:run]
omit =
    */_version.py
    */lextab.py
    */parsetab.py

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_imports = 2
known_first_party = brenda_parser
known_third_party =
    click
    click_log
    depinfo
    importlib_resources
    ply
    pytest
    six
    sqlalchemy
    tqdm

[tool:pytest]
testpaths = tests

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/brenda_parser/_version.py
versionfile_build = brenda_parser/_version.py
tag_prefix =
parentdir_prefix = brenda-parser-
