[metadata]
name = brenda-parser
url = https://github.com/Midnighter/BRENDA-Parser
download_url = https://pypi.org/project/brenda-parser/
author = Moritz E. Beber
author_email = midnighter@posteo.net
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = BSD 3-Clause License
description = A parser for the BRENDA flat file distribution.
long_description = file: README.rst
keywords =
    BRENDA
    parser
    enzyme

[options]
zip_safe = True
install_requires =
    click
    click-log
    depinfo
    importlib-resources
    SQLAlchemy
    tatsu
    tqdm
tests_require =
    tox
python_requires = >=3.6.*
package_dir =
     = src
packages = find:

[options.package_data]
brenda_parser.data =
    information_fields.csv

brenda_parser.parsing =
    parser.out

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    brenda = brenda_parser.cli:cli

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
    __init__.py
    _version.py

[coverage:run]
omit =
    _version.py

[isort]
line_length = 80
indent = 4
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_after_imports = 2
known_first_party = brenda_parser
known_third_party =
    click
    click_log
    depinfo
    importlib_resources
    pytest
    sqlalchemy
    tatsu
    tqdm

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/brenda_parser/_version.py
versionfile_build = brenda_parser/_version.py
tag_prefix =
parentdir_prefix = brenda-parser-
