[metadata]
name = brenda-parser
url = https://github.com/Midnighter/BRENDA-parser
download_url = https://pypi.org/project/BRENDA-parser/
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = BSD-3-Clause
description = A parser for the BRENDA enzyme database textfile distribution.
long_description = file: README.rst
keywords =
    BRENDA
    enzyme
    database
    parser

[options]
zip_safe = True
install_requires =
    depinfo
    pydantic
    pyparsing
    SQLAlchemy
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.package_data]
brenda_parser.data =
    README.md
    *.csv

[options.packages.find]
where = src

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/brenda_parser/_version.py
versionfile_build = brenda_parser/_version.py
tag_prefix =
parentdir_prefix = BRENDA-parser-

